--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,7 @@ PROJ_ARTIFACTID=progressimageview
 DEVELOPER_ID=ydcool
 DEVELOPER_NAME=ydcool
 DEVELOPER_EMAIL=hi@ydcool.me
+
+# plcaeholders for travis build.
+BINTRAY_USER=ydcool
+BINTRAY_KEY=****
